tdf#77241: sw: fix creation of field data source string

SwChangeDBDlg::UpdateFlds() depends on undefined behaviour in
constructing sTemp, because the call to GetDBName initializes local
variables that are already used in other sub-expressions of the
statement.

(regression from 8a7a9992906ba59d575ca9e4441b3e84fea5fae0)

Change-Id: Ibf8c0091da672e133d7a35bc61c059eaf65a3bc2
Reviewed-on: https://gerrit.libreoffice.org/14305
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Tested-by: Lionel Elie Mamane <lionel@mamane.lu>